pihole/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: config
          mountPath: "/etc/pihole"
        - name: dnsmasq
          mountPath: "/etc/dnsmasq.d"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: pihole-config
      - name: dnsmasq
        persistentVolumeClaim:
          claimName: pihole-dnsmasq
