pihole/service-dns-tcp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  annotations:
    metallb.io/allow-shared-ip: pihole
spec:
  type: LoadBalancer
  loadBalancerIP: 172.19.74.23
  externalTrafficPolicy: Local
  ports:
  - name: pihole-dns-tcp
    protocol: TCP
    port: 53
    targetPort: 53
