pihole/service-dns-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: plexmediaserver
spec:
  type: LoadBalancer
  loadBalancerIP: 172.19.74.21
  ports:
  - name: pihole-dns-udp
    protocol: UDP
    port: 53
    targetPort: 53
