pihole/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
spec:
  selector:
    app.kubernetes.io/name: pihole
    app.kubernetes.io/instance: pihole
  ports:
  - name: pihole-admin
    protocol: TCP
    port: 8000
    targetPort: 80
