pihole/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Pi Hole"
    gethomepage.dev/group: "Home Lab"
    gethomepage.dev/icon: "pi-hole.png"
spec:
  tls:
    - hosts:
      - "pihole.k.oneill.net"
      secretName: "pihole-tls"
  rules:
    - host: "pihole.k.oneill.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  number: 8000
